Corrected layout issues on the makeup and sfx pages

--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -207,36 +207,60 @@
   }
 }
 
-@media only screen and (min-width: 700px) and (max-width: 1299px) {
+@media only screen and (min-width: 700px) {
+  .gallery-container {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 799px) {
   .gallery-container {
     img {
-      height: 23rem;
-      width: 26rem;
+      height: 129px;
+      width: 146px;
     }
 
     :nth-child(3) {
-      height: 49rem !important;
+      height: 276px !important;
     }
 
     :nth-child(5) {
-      width: 55rem !important;
+      width: 310px !important;
     }
 
     :nth-child(11) {
-      height: 49rem !important;
+      height: 276px !important;
     }
 
     :nth-child(16) {
-      width: 55rem !important;
+      width: 310px !important;
+    }
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1299px) {
+  .gallery-container {
+    :nth-child(3) {
+      grid-area: 1 / 3 / 3 / 4;
+    }
+
+    :nth-child(5) {
+      grid-area: 3 / 1 / 4 / 3;
+    }
+
+    :nth-child(11) {
+      grid-area: 3 / 4 / 5 / 5;
+    }
+
+    :nth-child(16) {
+      grid-area: 5 / 2 / 6 / 4;
     }
   }
 }
 
 @media only screen and (min-width: 1300px) {
   .gallery-container {
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-
     img {
       width: 28rem;
       height: 25rem;
